--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 android {
-    namespace 'com.android.tai'
+    namespace 'com.financeoline.pro.gad'
     compileSdkVersion 34
     buildToolsVersion '30.0.3'
     defaultConfig {
-        applicationId "com.android.tai"
+        applicationId "com.financeoline.pro.gad"
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 100
@@ -15,7 +15,7 @@ android {
             abiFilters 'x86', 'armeabi-v7a', 'arm64-v8a'
         }
         manifestPlaceholders = [
-                "apk.applicationId"     : "com.android.tai",
+                "apk.applicationId"     : "com.financeoline.pro.gad",
         ]
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
