--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 android {
-    namespace 'com.uniapp.tai'
+//    namespace 'com.uniapp.tai'
     compileSdkVersion 34
-    buildToolsVersion '30.0.3'
+    buildToolsVersion '30.0.2'
     defaultConfig {
 //        com.financeoline.pro.gad
-        applicationId "com.uniapp.tai"
+//        applicationId "com.uniapp.tai"
         minSdkVersion 21
         targetSdkVersion 34
         versionCode 100
         versionName "1.0.0"
         multiDexEnabled true
         ndk {
-            abiFilters 'x86', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
         manifestPlaceholders = [
                 "apk.applicationId"     : "com.uniapp.tai",
@@ -23,6 +23,17 @@ android {
             targetCompatibility JavaVersion.VERSION_1_8
         }
         setProperty("archivesBaseName", "Demo-${new Date().format('MMddhhmm')}-v${versionName}(${versionCode})")
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+//    packaging.jniLibs.useLegacyPackaging = true
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
     }
     signingConfigs {
         config {
@@ -36,6 +47,9 @@ android {
     }
     buildTypes {
         debug {
+            debuggable true
+            jniDebuggable true
+            zipAlignEnabled false
             signingConfig signingConfigs.config
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -73,6 +87,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.facebook.fresco:fresco:2.5.0'
     implementation "com.facebook.fresco:animated-gif:2.5.0"
+    implementation "com.facebook.soloader:soloader:0.10.5"
+
     /*uniapp所需库-----------------------结束*/
     // 基座需要，必须添加
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -82,6 +98,7 @@ dependencies {
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'androidx.core:core:1.1.0'
     implementation "androidx.fragment:fragment:1.1.0"
+
 
     implementation "com.squareup.okhttp3:okhttp:3.12.12"
 
