--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,15 @@
         tools:node="remove" />
     <application
         android:name="io.dcloud.application.DCloudApplication"
+		android:allowBackup="true"
         android:allowClearUserData="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:debuggable="true"
-        android:exported="true"
+		android:extractNativeLibs="true"
+		android:supportsRtl="true"
+		android:usesCleartextTraffic="true"
+        tools:targetApi="m"
         >
 
         <activity
@@ -42,11 +45,11 @@
             android:configChanges="orientation|keyboardHidden|keyboard|navigation"
             android:label="@string/app_name"
             android:launchMode="singleTask"
+			android:exported="true"
             android:hardwareAccelerated="true"
             android:theme="@style/TranslucentTheme"
             android:screenOrientation="user"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true">
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
